--- a/css/style.css
+++ b/css/style.css
@@ -743,7 +743,6 @@ header {
     max-width: 130px;
     height: auto;
     margin-top: 10px;
-    border-radius: 100%;
     margin-bottom: 18px;
     /*24px - 6px = distância da foto pro nome. 6px de margem aproximadamente entre o texto e o fim do bloco do texto*/
 }
@@ -875,7 +874,6 @@ header {
         height: auto;
         margin-top: 35px;
         margin-bottom: 25px;
-        border-radius: 100%;
     }
 
     .nome {
@@ -1004,9 +1002,7 @@ figcaption {
         padding-top: clamp(0px, 3.47vw, 50px);
         display: flex;
         flex-direction: column;
-        width: fit-content;
-        align-items: start;
-        margin: auto;
+        align-items: center;
         /*margin-left: 4.65vw;*/
     }
 }
@@ -1167,7 +1163,7 @@ figcaption {
 .container-card-tela-perfil {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     justify-content: center;
     align-items: center;
     gap: 32px;
@@ -1189,7 +1185,7 @@ figcaption {
         width: 100%;
         height: 100%;
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
         justify-content: flex-start;
         gap: 13px;
     }
@@ -1197,7 +1193,8 @@ figcaption {
 
 .card-tela-perfil {
     width: 243px;
-    height: 326px;
+    /* height: 326px; */
+    height: 350px;
     display: flex;
     flex-direction: column;
     background-color: #161D26;
@@ -1205,23 +1202,12 @@ figcaption {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
-@media (min-width: 500px) {
-    .card-tela-perfil {
-        width: 243px;
-        height: 326px;
-        display: flex;
-        flex-direction: column;
-        background-color: #161D26;
-        border-radius: 23px 0 20px 0;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-    }
-}
-
 @media (min-width: 720px) {
     .card-tela-perfil {
         width: 100%;
         max-width: 313px;
-        height: 421px;
+        /* height: 421px; */
+        height: 445px;
         display: flex;
         flex-direction: column;
         background-color: #161D26;
@@ -1235,35 +1221,21 @@ figcaption {
     margin-top: 0 !important;
     width: 100%;
     height: 100%;
+    padding: 0 0.5em 0 0.5em;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding-top: 12px;
+    padding-bottom: 12px;
     align-items: center;
+    position: relative;
 }
 
-@media (min-width: 500px) {
-    .conteudo-card-tela-perfil {
-        flex: 1;
-        margin-top: 0 !important;
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        flex-direction: column;
-        align-items: center;
-    }
-}
 
 @media (min-width: 720px) {
     .conteudo-card-tela-perfil {
-        flex: 1;
-        margin-top: 0 !important;
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-        align-items: center;
-        gap: 1vh;
-        padding-bottom: 1.5vh;
+        gap: 5%;
+        padding-bottom: 14px;
     }
 }
 
@@ -1333,110 +1305,101 @@ figcaption {
     color: #FFFFFF;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 0 !important;
+    margin-bottom: 0;
+    white-space: nowrap;
+    /* deixar o titulo com 1 linha idenpeden */
+    width: 100%;
+    max-width: 297px;
+    max-height: 28px;
+    overflow: hidden;
 }
 
 @media (min-width: 500px) {
     .title-card-tela-perfil {
-        font-family: var(--font-vollkorn);
-        font-weight: 500;
-        font-size: 1.125rem;
-        color: #FFFFFF;
-        text-transform: uppercase;
-        text-align: center;
         margin-bottom: 0 !important;
     }
 }
 
 @media (min-width: 720px) {
     .title-card-tela-perfil {
-        font-family: var(--font-vollkorn);
-        font-weight: 500;
         font-size: clamp(18px, 1.875vw, 27px);
-        color: #FFFFFF;
         text-transform: none;
-        text-align: center;
-        margin-bottom: 0 !important;
     }
 }
 
 .descricao-card-tela-perfil {
     width: 100%;
+    line-height: normal;
     font-family: var(--font-raleway);
     font-weight: 300;
-    font-size: .625rem;
+    font-size: 10px;
     color: #FFFFFF;
     text-align: center;
     margin-bottom: 0 !important;
+    max-height: 45px;
+    /* margin-top: 6px; */
 }
 
 @media (min-width: 500px) {
     .descricao-card-tela-perfil {
         width: 95%;
-        font-family: var(--font-raleway);
-        font-weight: 300;
-        font-size: .625rem;
-        color: #FFFFFF;
-        text-align: center;
     }
 }
 
 @media (min-width: 720px) {
     .descricao-card-tela-perfil {
         width: 95%;
+        line-height: 1.3;
         font-family: var(--font-raleway);
         font-weight: 300;
-        font-size: clamp(10px, 0.97vw, 14px);
+        font-size: 14px;
         color: #FFFFFF;
         text-align: center;
+        max-height: 55px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
 .badges-card-projeto {
-    width: 95%;
-    height: 59px;
+    width: 100%;
+    max-height: 65px;
+    overflow: hidden;
     display: flex;
     flex-flow: row wrap;
-    align-content: center;
+    /*     align-content: flex-start; */
     justify-content: center;
     align-items: center;
-    gap: 7px 10px;
+    gap: 7px;
 }
+
+.badges-card-projeto img {
+    margin: 0 !important;
+    padding: 0 !important;
+    }
 
 @media (min-width: 500px) {
     .badges-card-projeto {
-        width: 95%;
-        height: 37px;
-        display: flex;
-        flex-flow: row wrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
         gap: 7px 10px;
     }
 }
 
 @media (min-width: 720px) {
     .badges-card-projeto {
-        width: 19.30vw;
-        max-width: 278px;
-        height: 82px;
-        display: flex;
-        flex-flow: row wrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        gap: 1.26vh 0.83vw;
+        max-height: 79px;        
+        gap: 12px 13px;
     }
 
     .badges-card-projeto img {
-        height: 1.78vw;
-        max-height: 18.3px;
+        /* height: 1.78vw; */
+        height: 18.3px;
     }
 }
 
 .link-ver-mais {
     text-decoration: none;
+    margin-bottom: 0 !important;
+
 }
 
 .btn-ver-mais {
@@ -2373,19 +2336,13 @@ figure {
 }
 
 .card-index {
-    text-align: center;
-    width: 64.8dvw;
     max-width: 100%;
-    aspect-ratio: 3 / 4;
+    width: 64.8dvw;
+    height: 86.933vw;
     background-color: var(--cor-bg-card);
     border-radius: 2em 0 2em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    margin: 0;
 }
 
 /* card perfil do index: faixa amarela e foto de perfil */
@@ -2397,9 +2354,8 @@ figure {
 }
 
 .card-index__foto {
-    width: 34.06vw;
-    max-width: 109px;
-    height: auto;
+    width: 6.87em;
+    height: 6.87em;
 }
 
 /* card perfil do index: corpo do conteudo*/
@@ -2414,7 +2370,7 @@ figure {
 .card-index__nome {
     font-family: var(--font-vollkorn);
     font-weight: 600;
-    font-size: clamp(17.92px, 5.6vw, 25px);
+    font-size: 1.12em;
     /* font-size: clamp(1.12em, 1rem + 1vw, 1.688em); */
     color: var(--branco-forte);
 }
@@ -2424,12 +2380,7 @@ figure {
     color: var(--branco-forte);
     font-family: var(--font-raleway);
     font-weight: 400;
-    font-size: clamp(9.9px, 2.5vw, 10.5px);
-    margin: clamp(2px, 0.6vw, 4px);
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-    max-height: 45px;
-    overflow: hidden;
+    font-size: 0.62em;
     /*  font-size: clamp(0.62em, 2.66vw + 1rem, 0.87em); */
 }
 
@@ -2490,12 +2441,12 @@ figure {
 
     /* card perfil do index: identificação*/
     .card-index__nome {
-        font-size: 25px;
+        font-size: 1.6875rem;
     }
 
     .card-index__descricao {
         width: 100%;
-        font-size: clamp(9.9px, 2.5vw, 12px);
+        font-size: .875rem;
     }
 
     /* card perfil do index: badges */
@@ -2783,59 +2734,3 @@ figure {
         max-height: 24px;
     }
 }
-
-/*feat36 correção (uma parte delas)*/
-.alinhar-inicio {
-    text-align: start;
-    width: fit-content;
-    flex-wrap: nowrap;
-}
-
-.gap-lideres {
-    gap: clamp(2px, 0.62vw, 3px);
-    width: fit-content;
-}
-
-.section-cards-index {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding: 16px;
-    box-sizing: border-box;
-}
-
-.div-cards-index {
-    display: inline-grid;
-    gap: 21px;
-    grid-template-columns: repeat(4, 260px);
-}
-
-@media (max-width: 1200px) {
-    .div-cards-index {
-        grid-template-columns: repeat(3, 260px);
-    }
-}
-
-@media (max-width: 900px) {
-    .div-cards-index {
-        grid-template-columns: repeat(2, 260px);
-    }
-}
-
-@media (max-width: 600px) {
-
-    .div-cards-index {
-        display: grid;
-        grid-template-columns: 1fr;
-        width: 100%;
-        max-width: 100%;
-        justify-items: center;
-    }
-}
-
-.card-index {
-    width: 260px;
-    box-sizing: border-box;
-}
-
-/*FIM DA CORREÇÃO DA FEAT36*/
